<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddMedicineActivity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="29dp"
        android:text="@string/txt1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ETxt1"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_below="@+id/txt1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/ETxt1"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ETxt2"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_below="@+id/ETxt1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/ETxt2"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ETxt3"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_below="@+id/ETxt2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/ETxt3"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ETxt3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/topic"
        android:text="@string/btn2"
        android:textStyle="bold" />


</RelativeLayout>